// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner overlaying content can be fullscreen 1`] = `
<styled.div
  data-testid="overlay"
>
  <styled.div
    aria-live="assertive"
    data-testid="container"
    fullScreen={true}
    inline={false}
  >
    <SpinnerSvg
      a11yLabel="Loading page"
      overlay={true}
      size="large"
      tip="Loading page"
      variant="primary"
    />
  </styled.div>
</styled.div>
`;

exports[`Spinner overlaying content places the spinner on top of the content while spinning 1`] = `
Array [
  <styled.div
    data-testid="spinner"
    overlay={true}
  >
    <div
      className="sc-gEvEer iswGuI"
      data-testid="spinner"
    >
      <styled.svg
        aria-labelledby="spinner-title-9"
        aria-live="assertive"
        data-testid="svg"
        height="100"
        role="alert"
        viewBox="0 0 100 100"
        width="100"
      >
        <svg
          aria-labelledby="spinner-title-9"
          aria-live="assertive"
          className="sc-eqUAAy eWAKov"
          data-testid="svg"
          height="100"
          role="alert"
          viewBox="0 0 100 100"
          width="100"
        >
          <title
            id="spinner-title-9"
          >
            Loading content
          </title>
          <styled.circle
            cx="50"
            cy="50"
            fill="none"
            r="20"
            strokeDasharray="89, 200"
            strokeDashoffset="0"
            strokeLinecap="round"
            strokeWidth="4"
            variant="primary"
          >
            <circle
              className="sc-fqkvVR fwUbmx"
              cx="50"
              cy="50"
              fill="none"
              r="20"
              strokeDasharray="89, 200"
              strokeDashoffset="0"
              strokeLinecap="round"
              strokeWidth="4"
            />
          </styled.circle>
        </svg>
      </styled.svg>
      <styled.div
        tabIndex="-1"
      >
        <div
          className="sc-dcJsrY klNqlJ"
          tabIndex="-1"
        >
          <Text
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            <styled.span
              block={false}
              bold={false}
              invert={false}
              size="small"
            >
              <span
                className="sc-aXZVg brTLRl"
                size="small"
              >
                Loading content
              </span>
            </styled.span>
          </Text>
        </div>
      </styled.div>
    </div>
  </styled.div>,
  <div
    className="sc-gEvEer iswGuI"
    data-testid="spinner"
  >
    <styled.svg
      aria-labelledby="spinner-title-9"
      aria-live="assertive"
      data-testid="svg"
      height="100"
      role="alert"
      viewBox="0 0 100 100"
      width="100"
    >
      <svg
        aria-labelledby="spinner-title-9"
        aria-live="assertive"
        className="sc-eqUAAy eWAKov"
        data-testid="svg"
        height="100"
        role="alert"
        viewBox="0 0 100 100"
        width="100"
      >
        <title
          id="spinner-title-9"
        >
          Loading content
        </title>
        <styled.circle
          cx="50"
          cy="50"
          fill="none"
          r="20"
          strokeDasharray="89, 200"
          strokeDashoffset="0"
          strokeLinecap="round"
          strokeWidth="4"
          variant="primary"
        >
          <circle
            className="sc-fqkvVR fwUbmx"
            cx="50"
            cy="50"
            fill="none"
            r="20"
            strokeDasharray="89, 200"
            strokeDashoffset="0"
            strokeLinecap="round"
            strokeWidth="4"
          />
        </styled.circle>
      </svg>
    </styled.svg>
    <styled.div
      tabIndex="-1"
    >
      <div
        className="sc-dcJsrY klNqlJ"
        tabIndex="-1"
      >
        <Text
          block={false}
          bold={false}
          invert={false}
          size="small"
        >
          <styled.span
            block={false}
            bold={false}
            invert={false}
            size="small"
          >
            <span
              className="sc-aXZVg brTLRl"
              size="small"
            >
              Loading content
            </span>
          </styled.span>
        </Text>
      </div>
    </styled.div>
  </div>,
]
`;

exports[`Spinner passes additional attributes to svg element 1`] = `
Array [
  <styled.svg
    aria-labelledby="spinner-title-11"
    aria-live="assertive"
    data-some-attr="some value"
    data-testid="svg"
    height="100"
    id="the-spinner"
    role="alert"
    viewBox="0 0 100 100"
    width="100"
  >
    <svg
      aria-labelledby="spinner-title-11"
      aria-live="assertive"
      className="sc-eqUAAy eWAKov"
      data-some-attr="some value"
      data-testid="svg"
      height="100"
      id="the-spinner"
      role="alert"
      viewBox="0 0 100 100"
      width="100"
    >
      <title
        id="spinner-title-11"
      >
        Loading content
      </title>
      <styled.circle
        cx="50"
        cy="50"
        fill="none"
        r="20"
        strokeDasharray="89, 200"
        strokeDashoffset="0"
        strokeLinecap="round"
        strokeWidth="4"
        variant="primary"
      >
        <circle
          className="sc-fqkvVR fwUbmx"
          cx="50"
          cy="50"
          fill="none"
          r="20"
          strokeDasharray="89, 200"
          strokeDashoffset="0"
          strokeLinecap="round"
          strokeWidth="4"
        />
      </styled.circle>
    </svg>
  </styled.svg>,
  <svg
    aria-labelledby="spinner-title-11"
    aria-live="assertive"
    className="sc-eqUAAy eWAKov"
    data-some-attr="some value"
    data-testid="svg"
    height="100"
    id="the-spinner"
    role="alert"
    viewBox="0 0 100 100"
    width="100"
  >
    <title
      id="spinner-title-11"
    >
      Loading content
    </title>
    <styled.circle
      cx="50"
      cy="50"
      fill="none"
      r="20"
      strokeDasharray="89, 200"
      strokeDashoffset="0"
      strokeLinecap="round"
      strokeWidth="4"
      variant="primary"
    >
      <circle
        className="sc-fqkvVR fwUbmx"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        strokeDasharray="89, 200"
        strokeDashoffset="0"
        strokeLinecap="round"
        strokeWidth="4"
      />
    </styled.circle>
  </svg>,
]
`;

exports[`Spinner renders 1`] = `
<div
  class="sc-gEvEer jQNvAm"
  data-testid="spinner"
>
  <svg
    aria-labelledby="spinner-title-1"
    aria-live="assertive"
    class="sc-eqUAAy eWAKov"
    data-testid="svg"
    height="100"
    role="alert"
    viewBox="0 0 100 100"
    width="100"
  >
    <title
      id="spinner-title-1"
    >
      Loading content
    </title>
    <circle
      class="sc-fqkvVR fwUbmx"
      cx="50"
      cy="50"
      fill="none"
      r="20"
      stroke-dasharray="89, 200"
      stroke-dashoffset="0"
      stroke-linecap="round"
      stroke-width="4"
    />
  </svg>
  <div
    class="sc-dcJsrY klNqlJ"
    tabindex="-1"
  >
    <span
      class="sc-aXZVg brTLRl"
    >
      Loading content
    </span>
  </div>
</div>
`;

exports[`Spinner renders a small secondary spinner 1`] = `
Array [
  <styled.div
    aria-live="assertive"
    data-testid="container"
    fullScreen={false}
    inline={true}
  >
    <div
      aria-live="assertive"
      className="sc-iGgWBj zckPf"
      data-testid="container"
    >
      <SpinnerSvg
        a11yLabel="Loading content"
        overlay={true}
        size="small"
        variant="secondary"
      >
        <styled.div
          data-testid="spinner"
          overlay={true}
        >
          <div
            className="sc-gEvEer iswGuI"
            data-testid="spinner"
          >
            <styled.svg
              aria-labelledby="spinner-title-4"
              aria-live="assertive"
              data-testid="svg"
              height="50"
              role="alert"
              viewBox="0 0 100 100"
              width="50"
            >
              <svg
                aria-labelledby="spinner-title-4"
                aria-live="assertive"
                className="sc-eqUAAy eWAKov"
                data-testid="svg"
                height="50"
                role="alert"
                viewBox="0 0 100 100"
                width="50"
              >
                <title
                  id="spinner-title-4"
                >
                  Loading content
                </title>
                <styled.circle
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                  variant="secondary"
                >
                  <circle
                    className="sc-fqkvVR duSTxA"
                    cx="50"
                    cy="50"
                    fill="none"
                    r="20"
                    strokeDasharray="89, 200"
                    strokeDashoffset="0"
                    strokeLinecap="round"
                    strokeWidth="4"
                  />
                </styled.circle>
              </svg>
            </styled.svg>
          </div>
        </styled.div>
      </SpinnerSvg>
      <styled.div
        data-testid="overlay"
      >
        <div
          className="sc-gsFSXq fPTKTP"
          data-testid="overlay"
        />
      </styled.div>
      <styled.div
        inert="true"
      >
        <div
          className="sc-imWYAI dqJbdG"
          inert="true"
        >
          <span
            aria-hidden="true"
            key=".0"
            tabIndex="-1"
          >
            Overlay me with the spinner
          </span>
        </div>
      </styled.div>
    </div>
  </styled.div>,
  <div
    aria-live="assertive"
    className="sc-iGgWBj zckPf"
    data-testid="container"
  >
    <SpinnerSvg
      a11yLabel="Loading content"
      overlay={true}
      size="small"
      variant="secondary"
    >
      <styled.div
        data-testid="spinner"
        overlay={true}
      >
        <div
          className="sc-gEvEer iswGuI"
          data-testid="spinner"
        >
          <styled.svg
            aria-labelledby="spinner-title-4"
            aria-live="assertive"
            data-testid="svg"
            height="50"
            role="alert"
            viewBox="0 0 100 100"
            width="50"
          >
            <svg
              aria-labelledby="spinner-title-4"
              aria-live="assertive"
              className="sc-eqUAAy eWAKov"
              data-testid="svg"
              height="50"
              role="alert"
              viewBox="0 0 100 100"
              width="50"
            >
              <title
                id="spinner-title-4"
              >
                Loading content
              </title>
              <styled.circle
                cx="50"
                cy="50"
                fill="none"
                r="20"
                strokeDasharray="89, 200"
                strokeDashoffset="0"
                strokeLinecap="round"
                strokeWidth="4"
                variant="secondary"
              >
                <circle
                  className="sc-fqkvVR duSTxA"
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                />
              </styled.circle>
            </svg>
          </styled.svg>
        </div>
      </styled.div>
    </SpinnerSvg>
    <styled.div
      data-testid="overlay"
    >
      <div
        className="sc-gsFSXq fPTKTP"
        data-testid="overlay"
      />
    </styled.div>
    <styled.div
      inert="true"
    >
      <div
        className="sc-imWYAI dqJbdG"
        inert="true"
      >
        <span
          aria-hidden="true"
          key=".0"
          tabIndex="-1"
        >
          Overlay me with the spinner
        </span>
      </div>
    </styled.div>
  </div>,
]
`;

exports[`Spinner renders a small spinner 1`] = `
Array [
  <styled.div
    aria-live="assertive"
    data-testid="container"
    fullScreen={false}
    inline={true}
  >
    <div
      aria-live="assertive"
      className="sc-iGgWBj zckPf"
      data-testid="container"
    >
      <SpinnerSvg
        a11yLabel="Loading content"
        overlay={true}
        size="small"
        variant="primary"
      >
        <styled.div
          data-testid="spinner"
          overlay={true}
        >
          <div
            className="sc-gEvEer iswGuI"
            data-testid="spinner"
          >
            <styled.svg
              aria-labelledby="spinner-title-3"
              aria-live="assertive"
              data-testid="svg"
              height="50"
              role="alert"
              viewBox="0 0 100 100"
              width="50"
            >
              <svg
                aria-labelledby="spinner-title-3"
                aria-live="assertive"
                className="sc-eqUAAy eWAKov"
                data-testid="svg"
                height="50"
                role="alert"
                viewBox="0 0 100 100"
                width="50"
              >
                <title
                  id="spinner-title-3"
                >
                  Loading content
                </title>
                <styled.circle
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                  variant="primary"
                >
                  <circle
                    className="sc-fqkvVR fwUbmx"
                    cx="50"
                    cy="50"
                    fill="none"
                    r="20"
                    strokeDasharray="89, 200"
                    strokeDashoffset="0"
                    strokeLinecap="round"
                    strokeWidth="4"
                  />
                </styled.circle>
              </svg>
            </styled.svg>
          </div>
        </styled.div>
      </SpinnerSvg>
      <styled.div
        data-testid="overlay"
      >
        <div
          className="sc-gsFSXq fPTKTP"
          data-testid="overlay"
        />
      </styled.div>
      <styled.div
        inert="true"
      >
        <div
          className="sc-imWYAI dqJbdG"
          inert="true"
        >
          <span
            aria-hidden="true"
            key=".0"
            tabIndex="-1"
          >
            Overlay me with the spinner
          </span>
        </div>
      </styled.div>
    </div>
  </styled.div>,
  <div
    aria-live="assertive"
    className="sc-iGgWBj zckPf"
    data-testid="container"
  >
    <SpinnerSvg
      a11yLabel="Loading content"
      overlay={true}
      size="small"
      variant="primary"
    >
      <styled.div
        data-testid="spinner"
        overlay={true}
      >
        <div
          className="sc-gEvEer iswGuI"
          data-testid="spinner"
        >
          <styled.svg
            aria-labelledby="spinner-title-3"
            aria-live="assertive"
            data-testid="svg"
            height="50"
            role="alert"
            viewBox="0 0 100 100"
            width="50"
          >
            <svg
              aria-labelledby="spinner-title-3"
              aria-live="assertive"
              className="sc-eqUAAy eWAKov"
              data-testid="svg"
              height="50"
              role="alert"
              viewBox="0 0 100 100"
              width="50"
            >
              <title
                id="spinner-title-3"
              >
                Loading content
              </title>
              <styled.circle
                cx="50"
                cy="50"
                fill="none"
                r="20"
                strokeDasharray="89, 200"
                strokeDashoffset="0"
                strokeLinecap="round"
                strokeWidth="4"
                variant="primary"
              >
                <circle
                  className="sc-fqkvVR fwUbmx"
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                />
              </styled.circle>
            </svg>
          </styled.svg>
        </div>
      </styled.div>
    </SpinnerSvg>
    <styled.div
      data-testid="overlay"
    >
      <div
        className="sc-gsFSXq fPTKTP"
        data-testid="overlay"
      />
    </styled.div>
    <styled.div
      inert="true"
    >
      <div
        className="sc-imWYAI dqJbdG"
        inert="true"
      >
        <span
          aria-hidden="true"
          key=".0"
          tabIndex="-1"
        >
          Overlay me with the spinner
        </span>
      </div>
    </styled.div>
  </div>,
]
`;

exports[`Spinner renders inline 1`] = `
Array [
  <styled.div
    aria-live="assertive"
    data-testid="container"
    fullScreen={false}
    inline={true}
  >
    <div
      aria-live="assertive"
      className="sc-iGgWBj zckPf"
      data-testid="container"
    >
      <SpinnerSvg
        a11yLabel="Loading content"
        overlay={true}
        size="large"
        tip="Loading content"
        variant="primary"
      >
        <styled.div
          data-testid="spinner"
          overlay={true}
        >
          <div
            className="sc-gEvEer iswGuI"
            data-testid="spinner"
          >
            <styled.svg
              aria-labelledby="spinner-title-6"
              aria-live="assertive"
              data-testid="svg"
              height="100"
              role="alert"
              viewBox="0 0 100 100"
              width="100"
            >
              <svg
                aria-labelledby="spinner-title-6"
                aria-live="assertive"
                className="sc-eqUAAy eWAKov"
                data-testid="svg"
                height="100"
                role="alert"
                viewBox="0 0 100 100"
                width="100"
              >
                <title
                  id="spinner-title-6"
                >
                  Loading content
                </title>
                <styled.circle
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                  variant="primary"
                >
                  <circle
                    className="sc-fqkvVR fwUbmx"
                    cx="50"
                    cy="50"
                    fill="none"
                    r="20"
                    strokeDasharray="89, 200"
                    strokeDashoffset="0"
                    strokeLinecap="round"
                    strokeWidth="4"
                  />
                </styled.circle>
              </svg>
            </styled.svg>
            <styled.div
              tabIndex="-1"
            >
              <div
                className="sc-dcJsrY klNqlJ"
                tabIndex="-1"
              >
                <Text
                  block={false}
                  bold={false}
                  invert={false}
                  size="small"
                >
                  <styled.span
                    block={false}
                    bold={false}
                    invert={false}
                    size="small"
                  >
                    <span
                      className="sc-aXZVg brTLRl"
                      size="small"
                    >
                      Loading content
                    </span>
                  </styled.span>
                </Text>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </SpinnerSvg>
      <styled.div
        data-testid="overlay"
      >
        <div
          className="sc-gsFSXq fPTKTP"
          data-testid="overlay"
        />
      </styled.div>
      <styled.div
        inert="true"
      >
        <div
          className="sc-imWYAI dqJbdG"
          inert="true"
        >
          <span
            aria-hidden="true"
            key=".0"
            tabIndex="-1"
          >
            Overlay me with the spinner
          </span>
        </div>
      </styled.div>
    </div>
  </styled.div>,
  <div
    aria-live="assertive"
    className="sc-iGgWBj zckPf"
    data-testid="container"
  >
    <SpinnerSvg
      a11yLabel="Loading content"
      overlay={true}
      size="large"
      tip="Loading content"
      variant="primary"
    >
      <styled.div
        data-testid="spinner"
        overlay={true}
      >
        <div
          className="sc-gEvEer iswGuI"
          data-testid="spinner"
        >
          <styled.svg
            aria-labelledby="spinner-title-6"
            aria-live="assertive"
            data-testid="svg"
            height="100"
            role="alert"
            viewBox="0 0 100 100"
            width="100"
          >
            <svg
              aria-labelledby="spinner-title-6"
              aria-live="assertive"
              className="sc-eqUAAy eWAKov"
              data-testid="svg"
              height="100"
              role="alert"
              viewBox="0 0 100 100"
              width="100"
            >
              <title
                id="spinner-title-6"
              >
                Loading content
              </title>
              <styled.circle
                cx="50"
                cy="50"
                fill="none"
                r="20"
                strokeDasharray="89, 200"
                strokeDashoffset="0"
                strokeLinecap="round"
                strokeWidth="4"
                variant="primary"
              >
                <circle
                  className="sc-fqkvVR fwUbmx"
                  cx="50"
                  cy="50"
                  fill="none"
                  r="20"
                  strokeDasharray="89, 200"
                  strokeDashoffset="0"
                  strokeLinecap="round"
                  strokeWidth="4"
                />
              </styled.circle>
            </svg>
          </styled.svg>
          <styled.div
            tabIndex="-1"
          >
            <div
              className="sc-dcJsrY klNqlJ"
              tabIndex="-1"
            >
              <Text
                block={false}
                bold={false}
                invert={false}
                size="small"
              >
                <styled.span
                  block={false}
                  bold={false}
                  invert={false}
                  size="small"
                >
                  <span
                    className="sc-aXZVg brTLRl"
                    size="small"
                  >
                    Loading content
                  </span>
                </styled.span>
              </Text>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </SpinnerSvg>
    <styled.div
      data-testid="overlay"
    >
      <div
        className="sc-gsFSXq fPTKTP"
        data-testid="overlay"
      />
    </styled.div>
    <styled.div
      inert="true"
    >
      <div
        className="sc-imWYAI dqJbdG"
        inert="true"
      >
        <span
          aria-hidden="true"
          key=".0"
          tabIndex="-1"
        >
          Overlay me with the spinner
        </span>
      </div>
    </styled.div>
  </div>,
]
`;

exports[`Spinner renders with children 1`] = `
<div
  aria-live="assertive"
  class="sc-iGgWBj ippCVi"
  data-testid="container"
>
  <div
    class="sc-gEvEer iswGuI"
    data-testid="spinner"
  >
    <svg
      aria-labelledby="spinner-title-2"
      aria-live="assertive"
      class="sc-eqUAAy eWAKov"
      data-testid="svg"
      height="100"
      role="alert"
      viewBox="0 0 100 100"
      width="100"
    >
      <title
        id="spinner-title-2"
      >
        Loading content
      </title>
      <circle
        class="sc-fqkvVR fwUbmx"
        cx="50"
        cy="50"
        fill="none"
        r="20"
        stroke-dasharray="89, 200"
        stroke-dashoffset="0"
        stroke-linecap="round"
        stroke-width="4"
      />
    </svg>
    <div
      class="sc-dcJsrY klNqlJ"
      tabindex="-1"
    >
      <span
        class="sc-aXZVg brTLRl"
      >
        Loading content
      </span>
    </div>
  </div>
  <div
    class="sc-gsFSXq fPTKTP"
    data-testid="overlay"
  />
  <div
    class="sc-imWYAI dqJbdG"
    inert="true"
  >
    <span
      aria-hidden="true"
      tabindex="-1"
    >
      Overlay me with the spinner
    </span>
  </div>
</div>
`;
